# Parallel-3D-Skeleton-Extraction-Using-Mesh-Segmentation

./: .OpenGL_WithoutWrappers.pro.swp  .cgaltypedefs.h.swp  .drawablemesh.h.swp  .drawableskeleton.h.swp  .glwidget.cpp.swp  .glwidget.h.swp  .linesegments.h.swp  .mesh.cpp.swp  .mesh.h.swp  .meshloader.h.swp  .meshsegment.h.swp  .meshskeleton.h.swp  .mypolyhedron.h.swm  .mypolyhedron.h.swn  .mypolyhedron.h.swo  .polygonalmesh.h.swp  .refinementembedding.h.swp  .scene.cpp.swp  .scene.h.swo  .scene.h.swp  .skeleton.h.swo  .skeleton.h.swp  .ycm_extra_conf.py  CMakeLists.txt  HOME  Makefile  OpenGL_WithoutWrappers.pro  OpenGL_WithoutWrappers.pro.user.45247d8  OpenGL_WithoutWrappers.pro.user.5d19666  README.md  TODO  TODOs.txt  axes.h  bidirectionalgraph.h  camera.h  cgaltypedefs.h  connectivitysurgeon.cpp  connectivitysurgeon.h  debug_meshcontractor.h  deformer.cpp  (+42 more)
Models/: bunny_belly.off  bunny_ear.off  bunny_earTest.off  bunny_head.off  frog_areaBetweenHeadAndBody.off  frog_body.off  frog_bottomOfHead.off  frog_upperHead.off  horse.obj.REMOVED.git-id  teapot_front.off  test_leg.off  tyra_arm.off  tyra_body.off  tyra_headAndNeck.off  tyra_leftFoot.off  tyra_nose.off  tyra_rightFoot.off
build-OpenGL_WithoutWrappers-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  OpenGL_WithoutWrappers
shaders/: .vertex.glsl.swp  axesfs.glsl  axesvs.glsl  edgefs.glsl  edgevs.glsl  fragment.glsl  segmfragment.glsl  simplevs.glsl  skeletonfragment.glsl  skeletonvertex.glsl  vertex.glsl
src/: camera.h  connectivitysurgeon.h  directionallight.h  drawablemesh.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.cpp  mesh.h  meshloader.h  meshsegment.h  meshskeleton.h  refinementembedding.h  scene.cpp  skeleton.h  ui_mainwindow.h  undirectedgraph.h
